# RealTimeChineseChess

./: .gitignore  CMakeLists.txt  LICENSE  README.md  server.py
qml/: Begin.qml  Board.qml  Button.qml  Dynamic.qml  Fighting.qml  Piece.qml  main.qml
res/: res.qrc
src/: main.cpp
src/chess/: A.cpp  A.h  Board.cpp  Board.h  C.cpp  C.h  ChessClient.cpp  ChessClient.h  E.cpp  E.h  G.cpp  G.h  H.cpp  H.h  Piece.cpp  Piece.h  R.cpp  R.h  Rule.cpp  Rule.h  S.cpp  S.h
